# pomodoro-app

./: .gitignore  README.md  contribution.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: publish.yaml  release.yaml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: getSuggestions.rs  get_suggestions.rs  history.rs  main.rs
src/components/: app_button.tsx  button.tsx  charts.tsx  customTimeInput.tsx  timeLineComponent.tsx  time_toggler.tsx
src/context/: TimeContext.tsx
src/pages/: about_us.tsx  history_page.tsx  home_page.tsx
